--- a/src/app/pages/clientes/clientesCadastro.component.html
+++ b/src/app/pages/clientes/clientesCadastro.component.html
@@ -6,21 +6,21 @@
         <div class="card px-6 py-6">
             <p-toast></p-toast>
             <p-toolbar styleClass="mb-4">
-                <ng-template pTemplate="left">
-                    <div class="my-2">
-                        <button id="openNew" pButton pRipple label="Novo" style="width:160px" icon="pi pi-plus"
-                            class="p-button-success mr-2" (click)="openNew()"></button>
-                        <button id="deleteAll" pButton pRipple label="Deletar" style="width:160px" icon="pi pi-trash"
-                            class="p-button-danger" (click)="deleteSelectedClientes()"
-                            [disabled]="!selectedClientes || !selectedClientes.length"></button>
-                        </div>
-                </ng-template>
+                <div class="my-2 p-toolbar-group-left">
+                    <button id="openNew" pButton pRipple label="Novo" style="width:160px" icon="pi pi-plus"
+                        class="p-button-success mr-2" (click)="openNew()"></button>
+                    <button id="deleteAll" pButton pRipple label="Deletar" style="width:160px" icon="pi pi-trash"
+                        class="p-button-danger" (click)="deleteSelectedClientes()"
+                        [disabled]="!selectedClientes || !selectedClientes.length"></button>
+                </div>
+                <div class="p-toolbar-group-right">
+                    <p-button label="Exportar" icon="pi pi-file-excel" (click)="exportToExcel()"></p-button>
+                </div>
             </p-toolbar>
             <p-table #dt [value]="clientes!" [columns]="cols" responsiveLayout="scroll" [rows]="10" [columns]="cols"
-                [rowsPerPageOptions]="[10,20,30]" 
-                [paginator]="true" [showCurrentPageReport]="true" [lazy]="true" [totalRecords]="totalRecords" 
-                (onLazyLoad)="page($event)"
-                currentPageReportTemplate="Mostrando {first} até {last} de {totalRecords} registros"
+                [rowsPerPageOptions]="[10,20,30, 50]" [paginator]="true" [showCurrentPageReport]="true" [lazy]="true"
+                [totalRecords]="totalRecords" (onLazyLoad)="page($event)"
+                currentPageReportTemplate="Mostrando {first} - {last} de {totalRecords} registros"
                 [(selection)]="selectedClientes" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
@@ -104,18 +104,18 @@
                                     </span>
                                 </div>
                             </div>
-                                <div class="field col" style="padding-top: 15px;">
-                                    <div class="form-group">
-                                        <span class="p-float-label">
-                                            <p-inputMask mask="(99) 99999-9999" id="celular" formControlName="celular"
-                                                placeholder="(99) 99999-9999" [(ngModel)]="cliente.celular"
-                                                [ngClass]="{'ng-invalid ng-dirty' : submitted && !cliente.celular}"></p-inputMask>
-                                            <label htmlFor="celular">Celular</label>
-                                        </span>
-                                        <small class="ng-dirty ng-invalid" *ngIf="submitted && !cliente.celular">Campo
-                                            Obrigatório.</small>
-                                    </div>
+                            <div class="field col" style="padding-top: 15px;">
+                                <div class="form-group">
+                                    <span class="p-float-label">
+                                        <p-inputMask mask="(99) 99999-9999" id="celular" formControlName="celular"
+                                            placeholder="(99) 99999-9999" [(ngModel)]="cliente.celular"
+                                            [ngClass]="{'ng-invalid ng-dirty' : submitted && !cliente.celular}"></p-inputMask>
+                                        <label htmlFor="celular">Celular</label>
+                                    </span>
+                                    <small class="ng-dirty ng-invalid" *ngIf="submitted && !cliente.celular">Campo
+                                        Obrigatório.</small>
                                 </div>
+                            </div>
                         </div>
                         <div class="formgrid grid">
                             <div class="field col" style="padding-top: 15px;">
