--- a/src/assets/layout/styles/theme/lara-dark-blue/theme.css
+++ b/src/assets/layout/styles/theme/lara-dark-blue/theme.css
@@ -5406,6 +5406,7 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
   border-radius: 0;
   transition: box-shadow 0.2s;
   user-select: none;
+  width: 175px;
 }
 .p-slidemenu .p-menuitem-link .p-menuitem-text {
   color: rgba(255, 255, 255, 0.87);
